--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pandorium",
   "type": "module",
+  "license": "MIT",
   "version": "1.0.0",
   "main": "build/pandorium.js",
   "scripts": {
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@types/inquirer": "^9.0.7",
-    "inquirer": "^9.2.12"
+    "inquirer": "^9.2.12",
+    "node-pty": "^1.0.0"
   }
 }
