added base folder structure and path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,5 @@
     },
     "outDir": "./build"
   },
-  "include": [
-    "./pandorium.ts",
-    "./pandorium.utils.ts",
-    "./setups/*",
-    "setups/setupNext/setupNext.ts",
-    "setups/setupVercel/setupVercel.ts"
-  ]
+  "include": ["./pandorium.ts", "./pandorium.utils.ts", "./setups/**/*"]
 }
