--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "version": "1.0.0",
   "main": "build/pandorium.js",
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "start": "node build/pandorium.js"
+    "build": "webpack",
+    "start": "node ./dist/bundle.mjs"
   },
   "devDependencies": {
     "@types/node": "^20.9.1",
-    "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.2"
+    "@types/webpack": "^5.28.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@types/inquirer": "^9.0.7",
     "inquirer": "^9.2.12",
     "node-pty": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=20.11.0"
   }
 }
