--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
+    "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
+    "copy-webpack-plugin": "^12.0.2",
+    "express": "^4.18.2",
     "global": "^4.4.0",
     "inquirer": "^9.2.12",
     "node-pty": "^1.0.0",
