--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.15",
+    "@types/pg": "^8.11.0",
     "@types/webpack": "^5.28.5",
     "copy-webpack-plugin": "^12.0.2",
     "express": "^4.18.2",
     "global": "^4.4.0",
     "inquirer": "^9.2.12",
     "node-pty": "^1.0.0",
+    "pg": "^8.11.3",
+    "pg-native": "^3.0.1",
     "typescript": "^5.3.3",
-    "vercel": "^33.4.1",
+    "vercel": "^33.5.1",
     "webpack": "^5.90.0",
     "yarn": "^1.22.21"
   },
